fix: remove whitespace on the right

--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ p{
     font-size:16px;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 nav button:hover{
     background-color: hsl(0, 0%, 98%);
     cursor: pointer;
@@ -121,7 +129,7 @@ nav button:hover{
         padding-right: 20px;
         position: relative;
         justify-content: space-between;
-        width:90%;
+        /* width:90%; */
     }
     
     #img, #desc {
@@ -290,269 +298,6 @@ nav button:hover{
     }
 }
 
-@media screen and (min-width:375px) and (max-width:500px){
-    header {
-        background-color: hsl(193, 100%, 96%);
-        padding: 35px;
-        background-image: url("./images/bg-hero-mobile.svg");
-    }  
-    nav {
-        background-color: hsl(193, 100%, 96%);
-        justify-content: space-between;
-        display: flex;
-    }
-
-    nav img {
-        width: 50%;
-        height: 50%;
-    }
-    
-    nav button {
-        background-color: white;
-        border-radius: 50px;
-        width: 150px;
-        border: none;
-        box-shadow: 0px 2px 5px  rgb(218, 216, 216);
-        font-family: "Open Sans";
-        font-weight: 700;
-        font-size: 12px;
-        margin-left: 30px;
-    }
-    
-    .hero-section {
-        display: flex;
-        flex-direction: column;
-        padding-top: 70px;
-        padding-bottom: 0;
-    }
-    
-    .hero-section img, #intro-text {
-        width: 100%
-    }
-
-    .hero-section img{
-        padding-top: 30px;
-    }
-    
-    #intro-text {
-        margin: auto;
-        /* margin-right: 30px; */
-        justify-content: center;
-    }
-    
-    #intro-text h1{
-        margin: 10px 0;
-        font-family: Poppins;
-        font-size: 24px;
-        text-align: center;
-    }
-    
-    #intro-text p{
-        margin: 20px 0;
-        font-family: "Open Sans";
-        font-weight: 400;
-        text-align: center;
-    }
-    
-    #intro-text button{
-        margin: 0 15%;
-        height: 40px;
-        border-radius: 50px;
-        width: 70%;
-        color: white;
-        background-color: hsl(322, 100%, 66%);
-        border: none;
-        font-family: "Open Sans";
-        font-weight: 700;
-        font-size: 12px;
-    }
-    
-    main {
-        display: flex;
-        margin: auto;
-        justify-items: center;
-        flex-direction: column;
-        margin-top: 80px;
-        /* padding:  */
-        width: 90%;  
-    }
-    
-    .cards {
-        box-shadow: 0px 2px 5px rgb(218, 216, 216);
-        border-radius: 12px;
-        margin: 12px;
-        height: 100vh;
-        display:flex;
-        flex-direction: column;
-        padding: 3em;
-        position: relative;
-        width:70%;
-    }
-    
-    #img, #desc {
-        width: 90%;
-        
-    } 
-    
-    
-    #desc{
-        align-content: center;
-        margin: auto;
-        height: 80%;
-    }
-    
-    #desc h3 {
-        margin: 20px 0;
-        font-family: "Poppins";
-        font-weight: 700;
-    }
-    #desc p {
-        font-family: "Open Sans";
-        font-weight: 400;
-        
-    }
-
-    #flowing-conversations h3{
-        margin-top: 30px;
-        margin-bottom: 0;
-    }
-
-    #flowing-conversations {
-        margin-bottom: 0;
-    }
-    
-    .cards img {
-        width: 100%;
-        height: 100%;
-        justify-self: center;
-        margin: auto;
-    }
-    
-    footer {
-        background-color: hsl(192, 100%, 9%);
-        padding-bottom: 30px;
-        margin-top: 180px;
-        position: relative;
-    }
-    
-    #floating-box {
-        background-color: white;
-        width: 90%;
-        justify-self: center;
-        text-align: center;
-        align-content: center;
-        padding: 2em 0;
-        height: 20%;
-        margin: auto;
-        top: -300px;
-        bottom: 500px;
-        box-shadow:  0px 2px 5px hsla(192, 100%, 9%, 0.452); 
-        right: 0;
-        left: 0;
-        position: absolute;
-        border-radius: 12px;
-        padding-bottom: 0;
-        font-family: "Poppins";
-        font-weight: 700;
-        font-size: 14px;
-    }
-    
-    #floating-box button {
-        height: 40px;
-        border-radius: 50px;
-        width: 200px;
-        color: white;
-        background-color: hsl(322, 100%, 66%);
-        border: none;
-        margin: 30px 0px;
-        font-family: "Open Sans";
-        font-weight: 700;
-        font-size: 12px;
-    }
-    
-    #footer-info {
-        display: flex;
-        flex-direction: column;
-        justify-items: center;
-        margin: 40px auto;
-        padding-top: 90px;
-        width: 90%;
-        font-family: "Open Sans";
-        font-weight: 400;
-    }
-    
-    footer p{
-        color:white;
-    }
-    
-    .list-tile {
-        display: flex;
-        flex-direction: row;
-    }
-    .list-tile p {
-        margin: 10px;
-        font-size: 14px;
-    }
-    
-    .list-tile img {
-        height: 10px;
-        width: 10px;
-        align-self: center;
-        /* margin: auto; */
-    }
-    
-    #location {
-        align-self: flex-start;
-        margin-top: 15px;
-    }
-    
-    #col-1, #col-4 {
-        width: 100%;
-        margin: 20px;
-    }
-    
-    #col-2, #col-3 {
-        width: 80%;
-        font-size: 15px;
-    }
-    
-    #col-2 p, #col-3 p{
-        margin: 12px;
-    }
-    #col-4{
-        margin: auto;
-        margin-top: 70px;
-        width: 100%;
-        text-align: center; 
-    }
-    
-    #white-logo {  
-        margin-bottom: 20px;
-        height: 25px;
-        filter: brightness(0) invert(1);
-    }
-    
-    small {
-        color: white;
-        text-align: end;
-        font-size: 11px;
-        font-family: "Open Sans";
-        font-weight: 400;
-    }
-    
-    #copyright {
-        width: 100%;
-        text-align: center;
-    }
-    
-    #col-4 img {
-        height: 25px;
-        width: 25px;
-        filter: brightness(0) invert(1);
-        margin: 2px;
-    }
-}
-
 @media screen and (max-width:375px){
     header {
         background-color: hsl(193, 100%, 96%);
@@ -632,11 +377,11 @@ nav button:hover{
     
     main {
         display: flex;
-        margin: auto;
+        margin: 0;
         justify-items: center;
         flex-direction: column;
         margin-top: 80px;
-        /* padding:  */
+        padding-left: 0; 
         width: 90%;  
     }
     
